--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;500;600;700&family=Mulish:wght@400;500;600;700&display=swap");
 .white-bg{
-    background:#ffffff
+    background:#dc0707
 }
 .gray-bg{
     background:#f5f5f5
