--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,7 +104,8 @@ body{
     font-family:"Mulish",sans-serif;
     font-weight:normal;
     font-style:normal;
-    font-size:16px
+    font-size:16px;
+    background-color:blue;
 }
 h1,h2,h3,h4,h5,h6{
     font-family:"Josefin Sans",sans-serif;
