--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2452,7 +2452,7 @@ hr{
     }
 }
 .slider-area,.slider-area2{
-    background-image:url(../img/hero/h1_hero.png);
+    background-image:url(../img/hero/h1_hero.jpg);
     background-size:cover;
     background-repeat:no-repeat;
     background-position:center center
